// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config .prepare should include id for those servers without it 1`] = `
Object {
  "client": "postgresql",
  "database": "company",
  "host": "10.10.10.10",
  "name": "without-id",
  "password": "password",
  "port": 5432,
  "user": "user",
}
`;

exports[`config .prepare should include id for those servers without it 2`] = `
Object {
  "client": "postgresql",
  "database": "company",
  "host": "10.10.10.10",
  "id": "c02c3687-c04b-40de-88b8-4f387402bd2b",
  "name": "without-id",
  "password": "password",
  "port": 5432,
  "ssl": false,
  "user": "user",
}
`;
